Day4/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: tektutor-ingress 
  namespace: ingress-nginx
  labels:
    app: nginx
spec:

  rules:
  - host: devops.tekutor.org 
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
         service:
           name: nginx 
           port: 
            number: 80
